// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TheNavigation 閉じた時のスナップショット 1`] = `
"<div>
  <nav>
    <div>
      <div class=\\"nav-bar\\">
        <div class=\\"nav-bar__box\\">
          <div><a href=\\"/\\" class=\\"base-logo\\">ダミーロゴ</a></div>
          <div class=\\"nav-icon\\"><button><span class=\\"nav-icon__border nav-icon__top nav-icon__top--close\\"></span> <span class=\\"nav-icon__border nav-icon__middle\\"></span> <span class=\\"nav-icon__border nav-icon__bottom nav-icon__bottom--close\\"></span> <span class=\\"nav-icon__text\\">
        NAVI
      </span></button></div>
        </div>
      </div>
    </div>
    <div>
      <transition-stub name=\\"nav-fade\\">
        <div class=\\"nav-list\\" style=\\"display: none;\\">
          <ul>
            <div>
              <li class=\\"nav-item\\"><a class=\\"nav-item__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミーナビゲーションの画像\\" class=\\"base-img base-img--lg\\">
                  <p class=\\"base-text base-text--nav\\">ダミーナビゲーション</p>
                </a></li>
            </div>
            <div>
              <li class=\\"nav-item\\"><a class=\\"nav-item__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミーナビゲーションの画像\\" class=\\"base-img base-img--lg\\">
                  <p class=\\"base-text base-text--nav\\">ダミーナビゲーション</p>
                </a></li>
            </div>
            <div>
              <li class=\\"nav-item\\"><a class=\\"nav-item__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミーナビゲーションの画像\\" class=\\"base-img base-img--lg\\">
                  <p class=\\"base-text base-text--nav\\">ダミーナビゲーション</p>
                </a></li>
            </div>
            <div>
              <li class=\\"nav-item\\"><a class=\\"nav-item__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミーナビゲーションの画像\\" class=\\"base-img base-img--lg\\">
                  <p class=\\"base-text base-text--nav\\">ダミーナビゲーション</p>
                </a></li>
            </div>
          </ul>
        </div>
      </transition-stub>
    </div>
  </nav>
</div>"
`;

exports[`TheNavigation 開いた時のスナップショット 1`] = `
"<div>
  <nav>
    <div>
      <div class=\\"nav-bar\\">
        <div class=\\"nav-bar__box\\">
          <div><a href=\\"/\\" class=\\"base-logo\\">ダミーロゴ</a></div>
          <div class=\\"nav-icon\\"><button><span class=\\"nav-icon__border nav-icon__top nav-icon__top--open\\"></span> <span class=\\"nav-icon__border nav-icon__middle nav-icon__middle--fade\\"></span> <span class=\\"nav-icon__border nav-icon__bottom nav-icon__bottom--open\\"></span> <span class=\\"nav-icon__text\\">
        CLOSE
      </span></button></div>
        </div>
      </div>
    </div>
    <div>
      <transition-stub name=\\"nav-fade\\">
        <div class=\\"nav-list\\" style=\\"\\">
          <ul>
            <div>
              <li class=\\"nav-item\\"><a class=\\"nav-item__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミーナビゲーションの画像\\" class=\\"base-img base-img--lg\\">
                  <p class=\\"base-text base-text--nav\\">ダミーナビゲーション</p>
                </a></li>
            </div>
            <div>
              <li class=\\"nav-item\\"><a class=\\"nav-item__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミーナビゲーションの画像\\" class=\\"base-img base-img--lg\\">
                  <p class=\\"base-text base-text--nav\\">ダミーナビゲーション</p>
                </a></li>
            </div>
            <div>
              <li class=\\"nav-item\\"><a class=\\"nav-item__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミーナビゲーションの画像\\" class=\\"base-img base-img--lg\\">
                  <p class=\\"base-text base-text--nav\\">ダミーナビゲーション</p>
                </a></li>
            </div>
            <div>
              <li class=\\"nav-item\\"><a class=\\"nav-item__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミーナビゲーションの画像\\" class=\\"base-img base-img--lg\\">
                  <p class=\\"base-text base-text--nav\\">ダミーナビゲーション</p>
                </a></li>
            </div>
          </ul>
        </div>
      </transition-stub>
    </div>
  </nav>
</div>"
`;
